--- a/app/globals.css
+++ b/app/globals.css
@@ -52,151 +52,194 @@ button {
   left: 0;
   width: 100%;
   height: 100%;
+  opacity: 0.8;
 }
 
 .glitch-text::before {
-  left: 2px;
-  text-shadow: -2px 0 #ff00c1;
+  left: 4px;
+  text-shadow: -4px -4px #ff00c1;
   clip: rect(24px, 550px, 90px, 0);
-  animation: glitch-anim-2 3s infinite linear alternate-reverse;
+  animation: glitch-anim-2 1.5s infinite linear alternate-reverse;
 }
 
 .glitch-text::after {
-  left: -2px;
-  text-shadow: -2px 0 #00fff9;
+  left: -4px;
+  text-shadow: 4px 4px #00fff9;
   clip: rect(85px, 550px, 140px, 0);
-  animation: glitch-anim 2.5s infinite linear alternate-reverse;
+  animation: glitch-anim 1s infinite linear alternate-reverse;
 }
 
 @keyframes glitch-anim {
   0% {
     clip: rect(51px, 9999px, 28px, 0);
+    transform: skew(0.5deg);
   }
   5% {
     clip: rect(70px, 9999px, 71px, 0);
+    transform: skew(-0.5deg);
   }
   10% {
     clip: rect(92px, 9999px, 100px, 0);
+    transform: skew(0.8deg);
   }
   15% {
     clip: rect(23px, 9999px, 15px, 0);
+    transform: skew(-0.8deg);
   }
   20% {
     clip: rect(60px, 9999px, 79px, 0);
+    transform: skew(0.3deg);
   }
   25% {
     clip: rect(73px, 9999px, 52px, 0);
+    transform: skew(-0.3deg);
   }
   30% {
     clip: rect(63px, 9999px, 27px, 0);
+    transform: skew(0.6deg);
   }
   35% {
     clip: rect(30px, 9999px, 96px, 0);
+    transform: skew(-0.6deg);
   }
   40% {
     clip: rect(61px, 9999px, 98px, 0);
+    transform: skew(0.4deg);
   }
   45% {
     clip: rect(93px, 9999px, 58px, 0);
+    transform: skew(-0.4deg);
   }
   50% {
     clip: rect(31px, 9999px, 67px, 0);
+    transform: skew(0.7deg);
   }
   55% {
     clip: rect(89px, 9999px, 80px, 0);
+    transform: skew(-0.7deg);
   }
   60% {
     clip: rect(74px, 9999px, 37px, 0);
+    transform: skew(0.2deg);
   }
   65% {
     clip: rect(85px, 9999px, 32px, 0);
+    transform: skew(-0.2deg);
   }
   70% {
     clip: rect(28px, 9999px, 46px, 0);
+    transform: skew(0.9deg);
   }
   75% {
     clip: rect(67px, 9999px, 22px, 0);
+    transform: skew(-0.9deg);
   }
   80% {
     clip: rect(39px, 9999px, 84px, 0);
+    transform: skew(0.5deg);
   }
   85% {
     clip: rect(56px, 9999px, 12px, 0);
+    transform: skew(-0.5deg);
   }
   90% {
     clip: rect(10px, 9999px, 86px, 0);
+    transform: skew(0.8deg);
   }
   95% {
     clip: rect(69px, 9999px, 41px, 0);
+    transform: skew(-0.8deg);
   }
   100% {
     clip: rect(20px, 9999px, 78px, 0);
+    transform: skew(0deg);
   }
 }
 
 @keyframes glitch-anim-2 {
   0% {
     clip: rect(36px, 9999px, 62px, 0);
+    transform: skew(-0.5deg);
   }
   5% {
     clip: rect(89px, 9999px, 45px, 0);
+    transform: skew(0.5deg);
   }
   10% {
     clip: rect(18px, 9999px, 71px, 0);
+    transform: skew(-0.8deg);
   }
   15% {
     clip: rect(94px, 9999px, 21px, 0);
+    transform: skew(0.8deg);
   }
   20% {
     clip: rect(67px, 9999px, 12px, 0);
+    transform: skew(-0.3deg);
   }
   25% {
     clip: rect(24px, 9999px, 86px, 0);
+    transform: skew(0.3deg);
   }
   30% {
     clip: rect(47px, 9999px, 31px, 0);
+    transform: skew(-0.6deg);
   }
   35% {
     clip: rect(52px, 9999px, 96px, 0);
+    transform: skew(0.6deg);
   }
   40% {
     clip: rect(72px, 9999px, 38px, 0);
+    transform: skew(-0.4deg);
   }
   45% {
     clip: rect(80px, 9999px, 69px, 0);
+    transform: skew(0.4deg);
   }
   50% {
     clip: rect(15px, 9999px, 57px, 0);
+    transform: skew(-0.7deg);
   }
   55% {
     clip: rect(40px, 9999px, 93px, 0);
+    transform: skew(0.7deg);
   }
   60% {
     clip: rect(35px, 9999px, 29px, 0);
+    transform: skew(-0.2deg);
   }
   65% {
     clip: rect(89px, 9999px, 44px, 0);
+    transform: skew(0.2deg);
   }
   70% {
     clip: rect(96px, 9999px, 17px, 0);
+    transform: skew(-0.9deg);
   }
   75% {
     clip: rect(75px, 9999px, 53px, 0);
+    transform: skew(0.9deg);
   }
   80% {
     clip: rect(23px, 9999px, 84px, 0);
+    transform: skew(-0.5deg);
   }
   85% {
     clip: rect(10px, 9999px, 66px, 0);
+    transform: skew(0.5deg);
   }
   90% {
     clip: rect(87px, 9999px, 25px, 0);
+    transform: skew(-0.8deg);
   }
   95% {
     clip: rect(30px, 9999px, 79px, 0);
+    transform: skew(0.8deg);
   }
   100% {
     clip: rect(56px, 9999px, 42px, 0);
+    transform: skew(0deg);
   }
 }
 
@@ -219,4 +262,30 @@ button {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.3));
+}
+
+.animate-scroll-left {
+  animation: scroll-left 60s linear infinite;
+}
+
+@keyframes scroll-left {
+  0% {
+    transform: translateX(200%);
+  }
+  100% {
+    transform: translateX(-200%);
+  }
+}
+
+.animate-scroll-right {
+  animation: scroll-right 60s linear infinite;
+}
+
+@keyframes scroll-right {
+  0% {
+    transform: translateX(-200%);
+  }
+  100% {
+    transform: translateX(200%);
+  }
 }
